access to org.graalvm.nativeimage.builder module
for package com.oracle.svm.core.jdk needed by the gluonfx plugin.